# awesome-ai-apps

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/: README_TEMPLATE.md
.github/implementation/: IMPROVEMENT_SUMMARY.md  PHASE3_CODE_QUALITY_REPORT.md
.github/scripts/: analyze-dependencies.py  apply-code-quality.ps1  check-hardcoded-secrets.py  improve-docs.ps1  migrate-to-uv.ps1  parse-bandit-report.py  standardize-documentation.ps1  validate-env-examples.py  validate-project-structure.py
.github/standards/: CODE_QUALITY_STANDARDS.md  ENVIRONMENT_CONFIG_STANDARDS.md  README_STANDARDIZATION_GUIDE.md  UV_MIGRATION_GUIDE.md
.github/tools/: README.md  code_quality_enhancer.py  comprehensive_code_quality_fixer.py
.github/workflows/: deploy-claude-cloud.yml  quality-assurance.yml  readme-link-only-check.yml  require-project-readme.yml
advance_ai_agents/advance_ai_agents/: README.md
advance_ai_agents/agentfield_finance_research_agent/: .env.example  Makefile  README.md
advance_ai_agents/ai-hedgefund/: README.md
advance_ai_agents/ai_novel_writer/: README.md  README_en.md  index.html  package.json
advance_ai_agents/bernstein_multi_agent_orchestrator/: README.md  app.py  bernstein.yaml  pyproject.toml
advance_ai_agents/candidate_analyser/: README.md  main.py
advance_ai_agents/car_finder_agent/: README.md  agent.py
advance_ai_agents/coding_agent_harness/: .env.example  README.md  app.py  cli.py  demo_data.py  graph.py  pyproject.toml  sandbox.py  tools.py
advance_ai_agents/coding_agent_harness/workspace/tests/: test_cart.py
advance_ai_agents/coding_model_arena/: .env.example  README.md  app.py  challenges.py  execution.py  judge.py  models.py  pyproject.toml  runner.py
advance_ai_agents/coding_model_arena/tests/: test_regressions.py
advance_ai_agents/conference_agnositc_cfp_generator/: .env.example  README.md  main.py
advance_ai_agents/conference_talk_abstract_generator/: README.md  adk_research_agent.py  couchbase_utils.py  crawl_talks.py  embeddinggeneration.py  extract_events.py  (+1 more)
advance_ai_agents/cosmos_arena_debate_council/: .env.example  README.md  app.py  cosmos_council.py  pyproject.toml
advance_ai_agents/diff_stack_code_agent/: README.md  app.py  graph.py  pyproject.toml  tools.py
advance_ai_agents/diff_stack_code_agent/workspace/: cart.py
advance_ai_agents/financial_document_os/backend/: pyproject.toml
advance_ai_agents/financial_document_os/backend/app/: config.py  main.py  models.py
advance_ai_agents/financial_document_os/backend/app/intelligence/: llm.py  nl2sql.py  normalize.py  resolve.py
advance_ai_agents/financial_document_os/backend/app/pipeline/: pages.py
advance_ai_agents/financial_document_os/backend/app/seed/: generate_corpus.py
advance_ai_agents/financial_document_os/backend/app/unsiloed/schemas/: accounts.json  contracts.json  investments.json  obligations.json  taxes.json  transactions.json  vendors.json
advance_ai_agents/maintainer_brief/backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
advance_ai_agents/maintainer_brief/backend/app/: auth.py  config.py  feedback.py  main.py  models.py  preview.py  projects_loader.py  scheduler.py
advance_ai_agents/maintainer_brief/backend/app/api/: routes.py
advance_ai_agents/maintainer_brief/backend/app/connectors/: exa.py  github_conn.py  hackernews.py  reddit.py  security.py
advance_ai_agents/maintainer_brief/backend/app/intelligence/: brief_v2.py  dedup.py  insights.py  llm.py  normalize.py  synthesize.py  trends.py
advance_ai_agents/maintainer_brief/backend/app/newsletter/: render.py  send.py
advance_ai_agents/maintainer_brief/backend/app/newsletter/templates/: brief.html.j2
advance_ai_agents/maintainer_brief/backend/app/pipeline/: orchestrator.py
advance_ai_agents/maintainer_brief/backend/app/unsiloed/: client.py  registry.py  worker.py
advance_ai_agents/maintainer_brief/backend/app/unsiloed/schemas/: security_signal.json
advance_ai_agents/pydantic_game_agent/: .env.example  .gitignore  README.md  pyproject.toml
advance_ai_agents/pydantic_game_agent/app/: __init__.py  agents.py  main.py  models.py  safety.py  storage.py
advance_ai_agents/pydantic_game_agent/app/static/: styles.css
advance_ai_agents/pydantic_game_agent/app/templates/: index.html
advance_ai_agents/pydantic_game_agent/tests/: test_agents.py  test_main.py  test_safety.py
cloud_environment/: .gitignore  README.md
financial_document_os/: .gitignore  README.md  docker-compose.yml
fine_tuning/: Fine_tuning.ipynb  README.md
maintainer_brief/: LAUNCH.md
memory_agents/engineering_content_agent/: .env.example  .gitignore  README.md  agents.py  app.py  chat.py  config.py  engram_memory.py  llm.py  models.py  pyproject.toml  requirements.txt  sources.py
memory_agents/engineering_content_agent/.streamlit/: config.toml
memory_agents/engineering_content_agent/outputs/: .gitignore
memory_agents/engineering_content_agent/tests/: test_engineering_content_agent.py
rag_apps/agentic_typed_rag_llamaindex/: .env.example  README.md  agent.py  app.py  pyproject.toml  rag.py  test_typed_rag.py
rag_apps/agentic_typed_rag_llamaindex/.streamlit/: config.toml
rag_apps/liteparse_invoice_auditor/: .env.example  README.md  app.py  pyproject.toml  test_app.py
rag_apps/pdf_rag_analyser/: app.py  pyproject.toml  requirements.txt
simple_ai_agents/nebius_social_campaign_planner/: README.md  app.py  pyproject.toml
simple_ai_agents/newsletter_agent/: .env.example  README.md  app.py  main.py  pyproject.toml
starter_ai_agents/: QUICKSTART.md
starter_ai_agents/agno_starter/: .env.example  README.md  main.py  pyproject.toml
voice_agents/customer_support_agent/: .env.example  README.md  main.py  pyproject.toml
voice_agents/funasr_nebius_voice_note_analyst/: .env.example  README.md  app.py  pyproject.toml
voice_agents/funasr_nebius_voice_note_analyst/tests/: test_app_smoke.py  test_funasr_client.py  test_nebius_client.py  test_settings.py
voice_agents/funasr_nebius_voice_note_analyst/voice_note_analyst/: __init__.py  clients.py  models.py  settings.py
(+646 files in other folders)
