[project]
name = "cosmos-arena-debate-council"
version = "0.1.0"
description = "Multi-agent debate council orchestrated with LangGraph, powered by NVIDIA Cosmos on Nebius Token Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-nebius>=0.1.3",
    "langchain-core>=0.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
]
