[project]
name = "engineering-content-agent"
version = "0.1.0"
description = "Chat-first engineering content intelligence agent using Agno, Nebius, HN, DEV, and Weaviate Engram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.48.1",
    "agno>=2.2.3",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "weaviate-engram>=0.1.0",
]
