[project]
name = "pdf-rag-analyser"
version = "0.1.0"
description = "Chat with multiple PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-ai-generativelanguage>=0.6.17",
    "langchain>=1.3.9",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.2.22",
    "langchain-google-genai>=4.0.0",
    "langchain-text-splitters>=1.1.2",
    "pandas>=2.2.3",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.54.0",
]
