[project]
name = "nebius-social-campaign-planner"
version = "0.1.0"
description = "Streamlit app that uses Nebius to plan launch-ready social campaigns."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-nebius>=0.1.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
