[project]
name = "customer-support-agent"
version = "0.1.0"
description = "A LiveKit customer support voice agent with AI manager handoff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai,silero]",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
]
