[project]
name = "funasr-nebius-voice-note-analyst"
version = "0.1.0"
description = "Local FunASR transcription with optional Nebius voice-note analysis."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.28.1",
  "openai>=1.95.1",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_note_analyst"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
