[project]
name = "maintainer-brief"
version = "0.1.0"
description = "Maintainer Intelligence Brief — ecosystem signals to newsletter, powered by Unsiloed"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.60",
    "apscheduler>=3.10,<4",
    "pymupdf>=1.24",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
